<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!---->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_khao_soii"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/selector_overlay"
                android:scaleType="fitXY"
                android:src="@drawable/btn_khao_soii" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E3F2FD"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/khaosoii"
                android:textSize="16sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_khao_niew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/selector_overlay"
                android:scaleType="fitXY"
                android:src="@drawable/btn_khao_niew" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E3F2FD"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/khaoniew"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_papaya"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/selector_overlay"
                android:scaleType="fitXY"
                android:src="@drawable/btn_papaya" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E3F2FD"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/papaya_salat"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_larb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/selector_overlay"
                android:scaleType="fitXY"
                android:src="@drawable/btn_larb" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E3F2FD"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/larb"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_khao_larm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/selector_overlay"
                android:scaleType="fitXY"
                android:src="@drawable/btn_khao_larm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E3F2FD"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/khaolarm"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_khao_g"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/selector_overlay"
                android:scaleType="fitXY"
                android:src="@drawable/btn_khao_g" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E3F2FD"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/khao_g"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_mieng"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/selector_overlay"
                android:scaleType="fitXY"
                android:src="@drawable/btn_mieng" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E3F2FD"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/mieng"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_fer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/selector_overlay"
                android:scaleType="fitXY"
                android:src="@drawable/btn_fer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E3F2FD"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/fer"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</merge>